ajout de plusieur marqueur avecun fake back

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@placeme/ngx-geo-api-gouv-address": "^1.0.2",
     "autoprefixer": "^10.4.0",
     "daisyui": "^1.16.5",
+    "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
     "postcss": "^8.4.5",
     "rxjs": "~7.4.0",
